--- a/doc/css/extra.css
+++ b/doc/css/extra.css
@@ -7,6 +7,7 @@
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.05) inset;
 }
 
+/* Fix links containing inline code. */
 a > code {
   color: #008CBA !important;
 }
@@ -14,4 +15,27 @@ a > code {
 a > code:hover,
 a > code:focus {
   color: #00526E !important;
+}
+
+/* Style the admonitions. */
+.admonition {
+  border: 1px solid #E8E8E8;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.05) inset;
+  background-color: #FAFAFA;
+  padding: 8px;
+}
+
+.admonition-title {
+  font-weight: bold;
+  float: left;
+  margin-right: 1ch;
+  margin-bottom: 0;
+}
+
+.admonition-title::after {
+  content: ':';
+}
+
+.admonition p:last-child {
+  margin-bottom: 0;
 }
