--- a/doc/css/extra.css
+++ b/doc/css/extra.css
@@ -23,6 +23,7 @@ a > code:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.05) inset;
   background-color: #FAFAFA;
   padding: 8px;
+  margin-bottom: 20px;
 }
 
 .admonition-title {
