Improve styling of the docs (underlines for main titles are in CSS now)

--- a/doc/css/extra.css
+++ b/doc/css/extra.css
@@ -1,3 +1,9 @@
+h1 {
+  padding-bottom: 21px;
+  margin-bottom: 21px;
+  border-bottom: 1px solid #DDD;
+}
+
 /* Make the inline code blocks look like the paragraph-level ones. */
 *:not(pre) > code {
   color: #333;
