Provide information about what files contain what matchers

--- a/doc/css/extra.css
+++ b/doc/css/extra.css
@@ -54,3 +54,10 @@ a > code:focus {
 .admonition p:last-child {
   margin-bottom: 0;
 }
+
+/* Add small subtitles */
+
+.subtitle {
+  margin-top: -10.5px;
+  color: #BBB;
+}
